[EFL] Utilize Eail library to support accessibility in EFL https://bugs.webkit.org/show_bug.cgi?id=137742

Reviewed by Gyuyoung Kim.

Source/WebKit2:

Initialize EAIL module so that all the listeners and atk-bridge started properly.
Dynamic loading of EAIL help us to avoid elementary dependencies in WebKit.

* WebProcess/efl/WebProcessMainEfl.cpp:
(eailLibraryPath): reads path provided by ACCESSIBILITY_EAIL_LIBRARY_PATH variable.
(eail):

Tools:

Eail, atk-bridge, at-spi2 are not mandatory modules for webkit-efl. They are rather optional.

* efl/jhbuild-optional.modules: Added.
* efl/jhbuild.modules:


Canonical link: https://commits.webkit.org/156894@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176514 268f45cc-cd09-0410-ab3c-d52691b4dbfc